
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 float M_PI ;
 float cosf (float const) ;
 int multiply_matrix (float**,float**,float**) ;
 float sinf (float const) ;

__attribute__((used)) static inline void calculate_rotation_matrix(float yaw, float pitch, float roll,
                                             float rot_mat[3][3],
                                             const int rotation_order[3])
{
    const float yaw_rad = yaw * M_PI / 180.f;
    const float pitch_rad = pitch * M_PI / 180.f;
    const float roll_rad = roll * M_PI / 180.f;

    const float sin_yaw = sinf(-yaw_rad);
    const float cos_yaw = cosf(-yaw_rad);
    const float sin_pitch = sinf(pitch_rad);
    const float cos_pitch = cosf(pitch_rad);
    const float sin_roll = sinf(roll_rad);
    const float cos_roll = cosf(roll_rad);

    float m[3][3][3];
    float temp[3][3];

    m[0][0][0] = cos_yaw; m[0][0][1] = 0; m[0][0][2] = sin_yaw;
    m[0][1][0] = 0; m[0][1][1] = 1; m[0][1][2] = 0;
    m[0][2][0] = -sin_yaw; m[0][2][1] = 0; m[0][2][2] = cos_yaw;

    m[1][0][0] = 1; m[1][0][1] = 0; m[1][0][2] = 0;
    m[1][1][0] = 0; m[1][1][1] = cos_pitch; m[1][1][2] = -sin_pitch;
    m[1][2][0] = 0; m[1][2][1] = sin_pitch; m[1][2][2] = cos_pitch;

    m[2][0][0] = cos_roll; m[2][0][1] = -sin_roll; m[2][0][2] = 0;
    m[2][1][0] = sin_roll; m[2][1][1] = cos_roll; m[2][1][2] = 0;
    m[2][2][0] = 0; m[2][2][1] = 0; m[2][2][2] = 1;

    multiply_matrix(temp, m[rotation_order[0]], m[rotation_order[1]]);
    multiply_matrix(rot_mat, temp, m[rotation_order[2]]);
}
